# ChangeLog for media-tv/gentoo-vdr-scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-tv/cvs-repo/gentoo-x86/media-tv/gentoo-vdr-scripts/ChangeLog,v 1.46 2006/03/20 16:03:49 zzam Exp $

  20 Mar 2006; Matthias Schwarzott <zzam@gentoo.org>
  gentoo-vdr-scripts-0.2.3-r1.ebuild:
  Marked stable on x86

  05 Mar 2006; Matthias Schwarzott <zzam@gentoo.org>
  -files/gentoo-vdr-scripts-0.1_alpha1-merge-commands.diff,
  -files/gentoo-vdr-scripts-0.1_alpha4-video-parameter.diff,
  -gentoo-vdr-scripts-0.2_alpha3.ebuild,
  -gentoo-vdr-scripts-0.2_alpha3-r1.ebuild, -gentoo-vdr-scripts-0.2.ebuild,
  -gentoo-vdr-scripts-0.2.1.ebuild, -gentoo-vdr-scripts-0.2.2.ebuild,
  -gentoo-vdr-scripts-0.2.3.ebuild:
  cleaned up old ebuilds

*gentoo-vdr-scripts-0.2.4 (05 Mar 2006)

  05 Mar 2006; Matthias Schwarzott <zzam@gentoo.org>
  +gentoo-vdr-scripts-0.2.4.ebuild:
  Version bumped.

*gentoo-vdr-scripts-0.2.2-r1 (13 Feb 2006)

  13 Feb 2006; Matthias Schwarzott <zzam@gentoo.org>
  +gentoo-vdr-scripts-0.2.2-r1.ebuild:
  corrected sed-path also in stable ebuild

*gentoo-vdr-scripts-0.2.3-r1 (12 Feb 2006)

  12 Feb 2006; Matthias Schwarzott <zzam@gentoo.org>
  +files/gentoo-vdr-scripts-0.2.3-sed-path.patch,
  +gentoo-vdr-scripts-0.2.3-r1.ebuild:
  corrected path to sed

  07 Feb 2006; Matthias Schwarzott <zzam@gentoo.org>
  +files/gentoo-vdr-scripts-0.2.2-config-comment-irctrl.patch,
  gentoo-vdr-scripts-0.2.2.ebuild, gentoo-vdr-scripts-0.2.3.ebuild:
  updated comments in config-file for >=vdr-1.3.36-r3, marked
  gentoo-vdr-scripts-0.2.2 stable on x86

  06 Feb 2006; Matthias Schwarzott <zzam@gentoo.org>
  gentoo-vdr-scripts-0.2_alpha3-r1.ebuild:
  Added missing variable definition (See bug #121826).

  31 Jan 2006; Matthias Schwarzott <zzam@gentoo.org>
  +files/gentoo-vdr-scripts-0.2.3-chuid-option.patch,
  gentoo-vdr-scripts-0.2.3.ebuild:
  corrected error in handling of chuid-option for newer vdr-versions
