@@ -1,0 +1,3 @@
+MD5 7e5da230c03c0b1afe867e265b2d6bfd gentoo-vdr-scripts-0.3.0.tar.bz2 20023
+RMD160 89509a697d2ad68c2fdcb5fd3ecef5a8884ebcd0 gentoo-vdr-scripts-0.3.0.tar.bz2 20023
+SHA256 c3947015ef8522e0e62f124d046c553668e7b5356ae165ee124a955527612402 gentoo-vdr-scripts-0.3.0.tar.bz2 20023
