@@ -1,6 +1,12 @@
 # ChangeLog for media-tv/gentoo-vdr-scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-tv/cvs-repo/gentoo-x86/media-tv/gentoo-vdr-scripts/ChangeLog,v 1.46 2006/03/20 16:03:49 zzam Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-tv/cvs-repo/gentoo-x86/media-tv/gentoo-vdr-scripts/ChangeLog,v 1.47 2006/03/21 21:17:20 zzam Exp $
+
+*gentoo-vdr-scripts-0.3.0 (21 Mar 2006)
+
+  21 Mar 2006; Matthias Schwarzott <zzam@gentoo.org>
+  +gentoo-vdr-scripts-0.3.0.ebuild:
+  Version bumped.
 
   20 Mar 2006; Matthias Schwarzott <zzam@gentoo.org>
   gentoo-vdr-scripts-0.2.3-r1.ebuild:
